force-app/main/default/objects/Lead/fields/Actual_in_service_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_in_service_date__c</fullName>
    <label>Actual in service date</label>
    <type>Date</type>
</CustomField>