force-app/main/default/objects/Lead/fields/Are_You__c.field-meta.xml
<CustomField>
    <fullName>Are_You__c</fullName>
    <label>Are You</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Practitioner</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>