force-app/main/default/objects/Lead/fields/Device_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Device_Interested_In__c</fullName>
    <label>Device Interested In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Era Elite</fullName>
            </value>
            <value>
                <fullName>Era Elite &amp; Exci308 Bundle</fullName>
            </value>
            <value>
                <fullName>Exci308</fullName>
            </value>
            <value>
                <fullName>Neo Elite</fullName>
            </value>
            <value>
                <fullName>Neo Elite &amp; Exci308 Bundle</fullName>
            </value>
            <value>
                <fullName>Neo V</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reverse (Bundle)</fullName>
            </value>
            <value>
                <fullName>NeoDerm</fullName>
            </value>
            <value>
                <fullName>NeoDerm (Bundle with Exci308)</fullName>
            </value>
            <value>
                <fullName>NeoDerm (Bundle with Era Elite)</fullName>
            </value>
            <value>
                <fullName>Neo Elite, Era Elite, Exci308</fullName>
            </value>
            <value>
                <fullName>NeoDerm (Neo Elite &amp; Exci308)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>