force-app/main/default/objects/Lead/fields/Do_you_have_a_budget_allocated__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_budget_allocated__c</fullName>
    <label>Do You Have a Budget Allocated?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>