force-app/main/default/objects/Lead/fields/First_Response_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Date_Time__c</fullName>
    <label>First Response Date/Time</label>
    <type>DateTime</type>
</CustomField>