force-app/main/default/objects/Lead/fields/goldcast__Goldcast_Batch_Error__c.field-meta.xml
<CustomField>
    <fullName>goldcast__Goldcast_Batch_Error__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goldcast Batch Error</label>
    <referenceTo>goldcast__BatchApexError__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>