force-app/main/default/objects/Lead/fields/How_Did_You_Hear_About_Us__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_Us__c</fullName>
    <description>How users found about us or an offer</description>
    <label>How Did You Hear About Us?</label>
    <type>TextArea</type>
</CustomField>