force-app/main/default/objects/Lead/fields/HubSpot_ID__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_ID__c</fullName>
    <externalId>true</externalId>
    <label>HubSpot ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>