force-app/main/default/objects/Lead/fields/HubSpot_Latest_Source_Date__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Latest_Source_Date__c</fullName>
    <label>HubSpot - Latest Source Date</label>
    <type>DateTime</type>
</CustomField>