force-app/main/default/objects/Lead/fields/IP_Country__c.field-meta.xml
<CustomField>
    <fullName>IP_Country__c</fullName>
    <label>IP Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>