force-app/main/default/objects/Lead/fields/Last_Lead_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Activity__c</fullName>
    <label>Last Lead Activity</label>
    <type>Date</type>
</CustomField>