force-app/main/default/objects/Lead/fields/Lead_Creation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creation_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Creation Date/Time</label>
    <type>DateTime</type>
</CustomField>