force-app/main/default/objects/Lead/fields/Lead_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Teams_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>