force-app/main/default/objects/Lead/fields/Lead_Territory_Owner_Match__c.field-meta.xml
<CustomField>
    <fullName>Lead_Territory_Owner_Match__c</fullName>
    <formula>OwnerId =  Territory__r.Territory_Owner__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead/Territory Owner Match</label>
    <type>Checkbox</type>
</CustomField>