force-app/main/default/objects/Lead/fields/LeadSourceAudit__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceAudit__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(LeadSource, &apos;Linkedin&apos;), ISPICKVAL(LeadSource, &apos;Instagram&apos;), ISPICKVAL(LeadSource, &apos;Facebook&apos;), ISPICKVAL(LeadSource, &apos;Tik Tok&apos;)
), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadSourceAudit</label>
    <type>Checkbox</type>
</CustomField>