force-app/main/default/objects/Lead/fields/LeadUrl__c.field-meta.xml
<CustomField>
    <fullName>LeadUrl__c</fullName>
    <formula>HYPERLINK(&quot;https://aerolase.lightning.force.com/lightning/r/Lead/Id/view&quot;, &quot;FirstName&quot;, &quot;blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadUrl</label>
    <type>Text</type>
</CustomField>