force-app/main/default/objects/Lead/fields/Loss_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reasons__c</fullName>
    <label>Loss Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad Timing</fullName>
            </value>
            <value>
                <fullName>No Need</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Missing Features</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>