force-app/main/default/objects/Lead/fields/Pipeline_Latest_Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Latest_Activity_Description__c</fullName>
    <label>Pipeline Latest Activity Description</label>
    <length>125</length>
    <type>Text</type>
</CustomField>