force-app/main/default/objects/Lead/fields/Pipeline_Owner__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Owner__c</fullName>
    <label>Pipeline Owner</label>
    <length>125</length>
    <type>Text</type>
</CustomField>