force-app/main/default/objects/Lead/fields/Salesloft_Update__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesloft Update</label>
    <type>Checkbox</type>
</CustomField>