force-app/main/default/objects/Lead/fields/Secondary_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Name__c</fullName>
    <label>Secondary Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>