force-app/main/default/objects/Lead/fields/SecondaryLeadOwner__c.field-meta.xml
<CustomField>
    <fullName>SecondaryLeadOwner__c</fullName>
    <formula>IF($User.Id =  Secondary_Lead_Owner__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsSecondaryOwner</label>
    <type>Checkbox</type>
</CustomField>