force-app/main/default/objects/Lead/fields/Territory_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner_Name__c</fullName>
    <formula>Territory__r.Territory_Owner__r.FirstName  &amp; &quot; &quot; &amp; Territory__r.Territory_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Owner Name</label>
    <type>Text</type>
</CustomField>