force-app/main/default/objects/Lead/fields/Treatment_Interests__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Interests__c</fullName>
    <label>Treatment Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ablative/Micro Peels</fullName>
            </value>
            <value>
                <fullName>Acne</fullName>
            </value>
            <value>
                <fullName>Aging Skin</fullName>
            </value>
            <value>
                <fullName>Autoimmune Diseases</fullName>
            </value>
            <value>
                <fullName>Hair</fullName>
            </value>
            <value>
                <fullName>Hyperpigmentation</fullName>
            </value>
            <value>
                <fullName>Melasma</fullName>
            </value>
            <value>
                <fullName>Nails</fullName>
            </value>
            <value>
                <fullName>Psoriasis</fullName>
            </value>
            <value>
                <fullName>Redness</fullName>
            </value>
            <value>
                <fullName>Rosacea</fullName>
            </value>
            <value>
                <fullName>Scars</fullName>
            </value>
            <value>
                <fullName>Skin of Color</fullName>
            </value>
            <value>
                <fullName>Skin Rejuvenation</fullName>
            </value>
            <value>
                <fullName>Skin Tightening</fullName>
            </value>
            <value>
                <fullName>Vascular Lesions</fullName>
            </value>
            <value>
                <fullName>Cutaneous Lesions</fullName>
            </value>
            <value>
                <fullName>Pigmented Lesions</fullName>
            </value>
            <value>
                <fullName>Skin Resurfacing</fullName>
            </value>
            <value>
                <fullName>PFB</fullName>
                <isActive>false</isActive>
                <label>PFB</label>
            </value>
            <value>
                <fullName>Scar Revision</fullName>
                <isActive>false</isActive>
                <label>Scar Revision</label>
            </value>
            <value>
                <fullName>Spider Veins</fullName>
                <isActive>false</isActive>
                <label>Spider Veins</label>
            </value>
            <value>
                <fullName>Warts</fullName>
                <isActive>false</isActive>
                <label>Warts</label>
            </value>
            <value>
                <fullName>Wound Healing</fullName>
                <isActive>false</isActive>
                <label>Wound Healing</label>
            </value>
            <value>
                <fullName>Wrinkles</fullName>
                <isActive>false</isActive>
                <label>Wrinkles</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>