force-app/main/default/objects/Lead/fields/What_Best_Describes_You__c.field-meta.xml
<CustomField>
    <fullName>What_Best_Describes_You__c</fullName>
    <label>What Best Describes You?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>What_Best_Describes_You</valueSetName>
    </valueSet>
</CustomField>