force-app/main/default/objects/Lead/fields/Would_You_Like_to_Schedule_a_Demo__c.field-meta.xml
<CustomField>
    <fullName>Would_You_Like_to_Schedule_a_Demo__c</fullName>
    <label>Would You Like to Schedule a Demo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>