force-app/main/default/objects/Lead/validationRules/Country_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    ISBLANK( Country ),
    AND((Country = &quot;United States&quot;),
        OR (ISBLANK( PostalCode ),
        ISBLANK( State ))),
    AND((Country = &quot;Canada&quot;),
        ISBLANK( State ))
)</errorConditionFormula>
    <errorMessage>Country is mandatory for all Leads.
For Canada, State is mandatory.
For United States, both ZIP Code and State are mandatory.</errorMessage>
</ValidationRule>