force-app/main/default/objects/Lead/validationRules/Lead_source_cannot_be_changed3.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_source_cannot_be_changed3</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( LeadSource ) &amp;&amp; (PRIORVALUE(LeadSource) &lt;&gt; &quot;&quot;) &amp;&amp; ! ($Profile.Name = &quot;System Administrator&quot;)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Lead source cannot be changed</errorMessage>
</ValidationRule>