force-app/main/default/objects/Lead/validationRules/LeadSource_Must_be_Cold_Call.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadSource_Must_be_Cold_Call</fullName>
    <active>true</active>
    <description>When creating a self-sourced lead, the sales rep must select the lead source as sales rep to bypass the Territory flow.</description>
    <errorConditionFormula>AND(
ISNEW(),
$Profile.Name = &apos;Aerolase Standard User&apos;,
NOT(ISPICKVAL(LeadSource, &quot;Cold Call&quot;))
)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>When creating a self-sourced lead, Lead Source should be &quot;Cold Call&quot;</errorMessage>
</ValidationRule>