force-app/main/default/objects/Lead/validationRules/PrimaryContactMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>PrimaryContactMandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
IsConverted = TRUE,
Primary_Contact__c = NULL
)</errorConditionFormula>
    <errorMessage>MUST ADD PRIMARY CONTACT IN ORDER TO CONVERT LEAD</errorMessage>
</ValidationRule>