force-app/main/default/objects/Lead/listViews/All_Open_Leads_Nevada.listView-meta.xml
<ListView>
    <fullName>All_Open_Leads_Nevada</fullName>
    <columns>FULL_NAME</columns>
    <columns>LAST_ACTIVITY_DATETIME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Specialty__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>Job_Title__c</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>NV,Nevada</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/30/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>tbutl,dbays</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Unqualified</value>
    </filters>
    <label>All Open Leads -Las Vegas</label>
</ListView>