force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Specialty__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>Job_Title__c</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.ZIP</columns>
    <columns>Second_Lead_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Open Leads</label>
</ListView>