force-app/main/default/objects/Lead/listViews/Country_Mexico.listView-meta.xml
<ListView>
    <fullName>Country_Mexico</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>LAST_ACTIVITY_DATETIME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Specialty__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>Job_Title__c</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>MX</value>
    </filters>
    <label>Country=Mexico</label>
</ListView>