force-app/main/default/objects/Lead/listViews/DG_Leads_Updated.listView-meta.xml
<ListView>
    <fullName>DG_Leads_Updated</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Second_Lead_Source__c</field>
        <operation>equals</operation>
        <value>NFCM</value>
    </filters>
    <label>DG Leads Updated</label>
    <sharedTo>
        <group>Cody_Todd</group>
    </sharedTo>
</ListView>