force-app/main/default/objects/Lead/listViews/International_Leads_ex_US_CA.listView-meta.xml
<ListView>
    <fullName>International_Leads_ex_US_CA</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COUNTRY_CODE</field>
        <operation>notEqual</operation>
        <value>CA,US</value>
    </filters>
    <label>International Leads (ex-US+CA)</label>
</ListView>