force-app/main/default/objects/Lead/listViews/My_New_Leads.listView-meta.xml
<ListView>
    <fullName>My_New_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>Specialty__c</columns>
    <columns>Job_Title__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My New Leads</label>
</ListView>